showed this to Carlo

--- a/DTViewer/app/resources/scenarios/views/reveal.jl.html
+++ b/DTViewer/app/resources/scenarios/views/reveal.jl.html
@@ -21,6 +21,10 @@
             <% end %> 
         </div> 
       </section>
-      <section>Slide 2</section>
+      <section>
+        <section>Vertical Slide 1</section>
+        <section>Vertical Slide 2</section>
+      </section>
+      <% partial(joinpath(Genie.config.path_resources, "scenarios", "views", "ellipse.jl.html")) %> 
     </div>
 </div>
